# hybrid-rag

./: .gitignore  README.md  config.py  main.py  pyproject.toml
examples/: customer_service_demo.py
hybrid_rag/: __init__.py  bm25_index.py  chunking.py  loaders.py  manifest.py  schemas.py  service.py  tokenization.py  vector_index.py
rag_modules/: __init__.py
tests/: conftest.py  test_chunking.py  test_service.py  test_tokenization_and_bm25.py
